Stop footer from covering content

--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,7 @@ body {
   color: #989898;
   display: flex;
   flex-direction: column;
+  margin-bottom: 100px;
 }
 
 .container {
